fix horizontal scrolling

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 body {
-  width: 100%;
+  width: 95%;
   display: flex;
   justify-content: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
